Release version 2.4.5 1. Added scrollbars to description on mobile 2. Fixed repeated blockquote text for source "SCP Foundation" (again)

--- a/src/components/Articles/Articles-mobile.css
+++ b/src/components/Articles/Articles-mobile.css
@@ -119,6 +119,7 @@
   }
 
   .description {
+    scrollbar-width: auto;
     box-shadow: none;
     top: 44.5%;
     right: 0;
